--- a/src/Website/Views/Carpooling/Index.cshtml
+++ b/src/Website/Views/Carpooling/Index.cshtml
@@ -113,7 +113,7 @@
 
             <div class="form-group">
               <label for="message" class="control-label">Message</label>
-              <textarea name="message" class="form-control full-width-input" ng-model="message"></textarea>
+              <textarea name="message" class="form-control full-width-input" ng-model="model.message"></textarea>
             </div>
           </div>
         </div>
