Prevent current location from being clickable

--- a/src/Website/Views/Carpooling/Index.cshtml
+++ b/src/Website/Views/Carpooling/Index.cshtml
@@ -230,7 +230,8 @@
                   strokeWeight: 2
                 },
                 zIndex: 100,
-                map: map
+                map: map,
+                clickable: false
               });
             }
           });
