--- a/src/Website/Views/Home/_Roster.cshtml
+++ b/src/Website/Views/Home/_Roster.cshtml
@@ -1,6 +1,6 @@
 ﻿<script type="text/ng-template" id="roster.html">
   <div class="panel" ng-class="{'panel-warning': event.isUnassigned, 'panel-default': event.closed, 'panel-primary': !event.closed && !event.isUnassigned}">
-    <div class="panel-heading">
+    <div class="panel-heading clearfix">
       <span class="fa fa-ban" ng-if="event.isUnassigned"></span>
       <div class="btn-group" ng-if="!event.isUnassigned">
         <button type="button" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
@@ -14,6 +14,7 @@
         </ul>
       </div>
       Roster :: {{event.name}}
+      <a class="btn btn-default btn-sm pull-right" ng-href="/events/{{event.id}}/carpooling">Carpool</a>
     </div>
     <table class="table table-striped table-condensed">
       <thead>
