--- a/src/Website/Views/Carpooling/Index.cshtml
+++ b/src/Website/Views/Carpooling/Index.cshtml
@@ -5,41 +5,35 @@
 <div ng-controller="CarpoolingCtrl" class="flexrow-stretch-height">
 
   <div class="stretch-height stretch-width vertical-flexbox">
-    <button class="btn-info btn-around-map" ng-click="changeLocation()" ng-if="!model.loading && model.ownCarpoolerEntry" ng-cloak>
+    <button class="btn-info btn-around-map" ng-click="changeLocation()" ng-if="!model.loading && model.ownCarpoolerEntry && !model.isChangingLocation" ng-cloak>
       <span class="h4">Change your location</span>
     </button>
 
-    <div class="flexrow-stretch-height">
-      <div id="map" class="stretch-height stretch-width"><p style="padding: 12px">Loading map...</p></div>
+    <div class="fullscreen-page-header horizontal-flexbox" ng-if="model.isChangingLocation" ng-cloak>
+      <button class="fullscreen-page-header-button" ng-click="cancelChangeLocation()">Back</button>
+      <div class="flexcolumn-stretch-width">
+        <h4>{{model.isChangingLocationForFirstTime ? 'Pick your location' : 'Change location'}}</h4>
+        <p>Pan &amp; zoom map under pin</p>
+      </div>
+      <button class="fullscreen-page-header-button" ng-click="saveChangedLocation()">{{model.isChangingLocationForFirstTime ? 'Next' : 'OK'}}</button>
     </div>
 
-    <button class="btn-primary btn-around-map" ng-click="addSelf()" ng-if="!model.loading && !model.ownCarpoolerEntry" ng-cloak>
-      <span class="h4">Add yourself</span><span>&nbsp;(driver or passenger)</span>
+    <div class="flexrow-stretch-height">
+      <div id="map" class="stretch-height stretch-width"><p style="padding: 12px">Loading map...</p></div>
+      <div class="map-center-marker" ng-if="model.isChangingLocation" ng-cloak></div>
+    </div>
+
+    <button class="btn-primary btn-around-map" ng-click="addSelf()" ng-if="!model.loading && !model.ownCarpoolerEntry && !model.isChangingLocation" ng-cloak>
+      <span class="h4" ng-if="!model.addYourselfDetailsLoading">Add yourself</span><span>&nbsp;(driver or passenger)</span>
+      <span class="h4" ng-if="model.addYourselfDetailsLoading" ng-cloak>Loading...</span>
     </button>
-    <div class="horizontal-flexbox" ng-if="!model.loading && model.ownCarpoolerEntry" ng-cloak>
+    <div class="horizontal-flexbox" ng-if="!model.loading && model.ownCarpoolerEntry && !model.isChangingLocation" ng-cloak>
       <button class="flexcolumn-stretch-width btn-primary btn-around-map" ng-click="editSelf()">
-        <span class="h4">Edit yourself</span>
+        <span class="h4">Edit your info</span>
       </button>
       <button id="buttonCarpoolingRemoveSelf" class="btn-danger" ng-click="removeSelf()">
         <span class="h4">&#x1f5d1;</span>
       </button>
-    </div>
-  </div>
-
-
-  <div class="stretch-height stretch-width vertical-flexbox" ng-show="model.isChangingLocation" ng-cloak style="background: white">
-    <div class="fullscreen-page-header horizontal-flexbox">
-      <button class="fullscreen-page-header-button" ng-click="cancelChangeLocation()">Back</button>
-      <div class="flexcolumn-stretch-width">
-        <h4>Change location</h4>
-        <p>Pan &amp; zoom map under pin</p>
-      </div>
-      <button class="fullscreen-page-header-button" ng-click="saveChangedLocation()">OK</button>
-    </div>
-
-    <div class="flexrow-stretch-height">
-      <div id="changeLocationMap" class="stretch-height stretch-width"><p style="padding: 12px">Loading map...</p></div>
-      <div class="map-center-marker"></div>
     </div>
   </div>
 
@@ -186,7 +180,6 @@
     var mapInitializedDeferral = null;
     var map;
     var carpoolerMarkers = [];
-    var changeLocationMap;
     var personModal = createModalObject('personModal');
     var updateInfoModal = createModalObject('updateInfoModal');
     var removeSelfModal = createModalObject('removeSelfModal');
@@ -352,21 +345,22 @@
 
         $scope.$watch('model.isChangingLocation', function () {
           if ($scope.model.isChangingLocation) {
-            var center = {
-              lat: $scope.model.ownCarpoolerEntry.locationLatitude,
-              lng: $scope.model.ownCarpoolerEntry.locationLongitude
-            };
-            if (!changeLocationMap) {
-              changeLocationMap = new google.maps.Map(document.getElementById('changeLocationMap'), {
-                center: center,
-                zoom: map.zoom
-              });
-
-              addOwnLocationToMap(changeLocationMap);
+            var center = null;
+            if (!$scope.model.isChangingLocationForFirstTime && $scope.model.ownCarpoolerEntry) {
+              center = {
+                lat: $scope.model.ownCarpoolerEntry.locationLatitude,
+                lng: $scope.model.ownCarpoolerEntry.locationLongitude
+              };
+            } else if ($scope.model.isChangingLocationForFirstTime && $scope.model.pickLocationStartPosition) {
+              center = {
+                lat: $scope.model.pickLocationStartPosition.latitude,
+                lng: $scope.model.pickLocationStartPosition.longitude
+              };
             } else {
-              changeLocationMap.setCenter(center);
-              changeLocationMap.setZoom(map.zoom);
+              center = map.center;
             }
+
+            map.setCenter(center);
           }
         });
 
