--- a/src/Website/Views/Home/Index.cshtml
+++ b/src/Website/Views/Home/Index.cshtml
@@ -14,8 +14,8 @@
       </div>
     </div>
     <div class="col-xs-12 col-md-6 col-md-offset-3 list-group" ng-cloak="true">
-      <div class="list-group-item" ng-repeat="event in events | orderBy:eventsSortPredicate">
-        <i class="fa fa-2x fa-fw fa-pull-left clearfix" ng-class="{'fa-ban': event.closed, 'fa-bullhorn': !event.closed }"></i>
+      <div class="list-group-item clearfix" ng-repeat="event in events | orderBy:eventsSortPredicate">
+        <i class="fa fa-2x fa-fw fa-pull-left" ng-class="{'fa-ban': event.closed, 'fa-bullhorn': !event.closed }"></i>
         <div class="pull-right">
           <button class="btn btn-success btn-block" ng-click="signin(event)" ng-if="canSignIn(event)">Sign In</button>
           <button class="btn btn-block" ng-click="signout(event)" ng-if="canSignOut(event)">Sign Out</button>
