Add View on Google Maps button

--- a/src/Website/Views/Carpooling/Index.cshtml
+++ b/src/Website/Views/Carpooling/Index.cshtml
@@ -74,6 +74,7 @@
           </div>
         </div>
         <div class="modal-footer">
+          <a class="btn btn-info" href="https://www.google.com/maps/place/{{model.carpooler.locationLatitude}},{{model.carpooler.locationLongitude}}">View on Google Maps</a>
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         </div>
       </div>
