--- a/src/Website/Views/Home/Index.cshtml
+++ b/src/Website/Views/Home/Index.cshtml
@@ -5,6 +5,15 @@
 <div ng-controller="MeCtrl">
   <div class="row">
     <div class="col-xs-12 col-md-6 col-md-offset-3 list-group" ng-cloak="true">
+      <div class="panel panel-info" ng-repeat="entry in getSignedIns()">
+        <div class="panel-heading">Signed In</div>
+        <div class="panel-body">
+          <p><strong>You are currently signed into {{entry.eventName}}. Click the button below to sign out.</strong></p>
+          <button class="btn pull-right" ng-click="signout({id: entry.eventId, name: entry.eventName})">Sign Out</button>
+        </div>
+      </div>
+    </div>
+    <div class="col-xs-12 col-md-6 col-md-offset-3 list-group" ng-cloak="true">
       <div class="panel panel-warning" ng-if="isInUnassigned()">
         <div class="panel-heading">Unassigned Signin</div>
         <div class="panel-body">
@@ -108,6 +117,9 @@
           },
           isInUnassigned: function () {
             return rosterService.signins.filter(function (f) { return f.memberId == memberId && f.eventId == null && !f.timeOut; }).length > 0;
+          },
+          getSignedIns: function () {
+            return rosterService.signins.filter(function (f) { return f.memberId == memberId && !f.timeOut; });
           }
         })
 
